# numi

./: .gitlab-ci.yml  README.md  requirements_dev.txt  setup.cfg
src/numi/: __init__.py  main.py
tests/: test_numi.py  todo_test_numi_decimals.py
