[metadata]
name = numi
version = 0.0.13
author = David Erik Mollberg
author_email = tiro@tiro.is
description = A package that expands Icelandic numbers to their corresponding written form
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/tiro-is/h10/numi
project_urls =
    Bug Tracker = https://gitlab.com/tiro-is/h10/numi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

; [options.entry_points]
; console_scripts =
;     executable-name = my_package.module:function


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

; The following option indicates if the package has been type hinted. 
; It requires that a file src/py.typed 
; [options.package_data]
; numi = py.typed

; Configureations for flake8
[flake8]
max-line-length = 160
